[project]
name = "play-pyspark-ai"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "shunta-anezaki", email = "shunta.anezaki@magia.co.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.276",
]

[tool.hatch.metadata]
allow-direct-references = true
